--- a/bases/src/styles.sass
+++ b/bases/src/styles.sass
@@ -36,3 +36,14 @@ button:focus
 
 .p-1 
   padding: 1px
+
+.row
+  display: flex
+
+.col
+  flex-grow: 1
+  margin: 0px 10px
+
+input
+  display: block
+  margin: 5px
